--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Scraper</title>
-    <style>
-        body { font-family: sans-serif; padding: 20px; }
-        input { width: 80%; padding: 12px; margin-bottom: 10px; font-size: 16px; border-radius: 8px; border: 1px solid #ccc; }
-        button { padding: 12px 24px; font-size: 16px; background: #0070f3; color: white; border: none; border-radius: 8px; cursor: pointer; }
-        #result { margin-top: 20px; padding: 15px; background: #f0f0f0; border-radius: 8px; white-space: pre-wrap; }
-    </style>
-</head>
-<body>
-    <h2>サイト情報取得ツール</h2>
-    <input type="url" id="targetUrl" placeholder="https://example.com" required>
-    <button type="button" onclick="runScraper()">情報を取得する</button>
+<section style="border-top: 2px dashed #ff4444; margin-top: 30px; padding-top: 20px;">
+    <h3>💥 バトルモード (1000 Burst)</h3>
+    <p>※友達との合意がある場合のみ使用してください</p>
+    
+    <button type="button" 
+            id="burstBtn" 
+            onclick="triggerBurst()" 
+            style="background: #ff4444; padding: 20px; width: 100%; font-weight: bold; font-size: 1.2rem;">
+        1000リクエスト射出
+    </button>
+    
+    <div id="statusLog" style="margin-top: 10px; color: #ff4444; font-family: monospace;"></div>
+</section>
 
-    <div id="result">ここに結果が表示されます</div>
+<script>
+async function triggerBurst() {
+    const url = document.getElementById('targetUrl').value;
+    const btn = document.getElementById('burstBtn');
+    const log = document.getElementById('statusLog');
 
-    <script>
-        async function runScraper() {
-            const url = document.getElementById('targetUrl').value;
-            const resDiv = document.getElementById('result');
-            resDiv.innerText = "取得中...";
+    if(!url) return alert("ターゲットURLを入力してください");
 
-            try {
-                const response = await fetch('/api', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ url: url })
-                });
-                const data = await response.json();
-                resDiv.innerText = JSON.stringify(data, null, 2);
-            } catch (err) {
-                resDiv.innerText = "エラーが発生しました: " + err;
-            }
-        }
-    </script>
-</body>
-</html>
+    btn.disabled = true;
+    btn.innerText = "射出中...";
+    log.innerText = "ターゲット: " + url + " へ1000件送信中...";
+
+    try {
+        const response = await fetch('/api/heavy_bot', {
+            method: 'POST',
+            body: JSON.stringify({ url: url, amount: 1000 })
+        });
+        const result = await response.json();
+        log.innerText = `完了！ 成功: ${result.success} / 合計: ${result.total}`;
+    } catch (e) {
+        log.innerText = "エラー: " + e;
+    } finally {
+        btn.disabled = false;
+        btn.innerText = "1000リクエスト射出";
+    }
+}
+</script>
